_includes/css/agency.css
/* ... */
.btn-xl .badge {
    color: #{{ site.data.template.color.primary }};
    background-color: #fff;
}


.btn-xl-secondary {
    text-transform: none;
    font-size: 18px;
    font-weight: lighter;
    white-space: normal;
}

.navbar-default {
    border-color: transparent;
    background-color: #222;
}

.navbar-default .navbar-brand {
    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
    color: #{{ site.data.template.color.primary }};
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus,
.navbar-default .navbar-brand:active,
.navbar-default .navbar-brand.active {
    color: #{{ site.data.template.color.secondary }};
}

.navbar-default .navbar-collapse {
    border-color: rgba(255,255,255,.02);
}

.navbar-default .navbar-toggle {
    border-color: #{{ site.data.template.color.primary }};
    background-color: #{{ site.data.template.color.primary }};
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #fff;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    background-color: #{{ site.data.template.color.primary }};
}

.navbar-default .nav li a {
    text-transform: uppercase;
    font-family: {{ site.data.template.font.primary }};
    font-weight: 400;
    letter-spacing: 1px;
    color: #fff;
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.navbar-default .nav li a:hover,
.navbar-default .nav li a:focus {
    outline: 0;
    color: #{{ site.data.template.color.primary }};
}

.navbar-default .navbar-nav>.active>a {
    border-radius: 0;
    color: #fff;
    background-color: #{{ site.data.template.color.primary }};
    text-shadow: none;
}

.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus {
    color: #fff;
    background-color: #{{ site.data.template.color.secondary }};
}

@media(min-width:768px) {
    .navbar-default {
        padding: 25px 0;
        border: 0;
        background-color: rgba(0, 0, 0, 0.8);
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }

    .navbar-default .navbar-brand {
        font-size: 2em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-default .navbar-nav>.active>a {
        border-radius: 3px;
    }

    .navbar-default.navbar-shrink {
        padding: 10px 0;
        background-color: #222;
    }

    .navbar-default.navbar-shrink .navbar-brand {
        font-size: 1.5em;
    }
}

header {
    text-align: center;
    color: #fff;
    background-attachment: scroll;
    background-color: #000;
    background-image: url('{{ site.baseurl }}/img/header-bg.jpg');
    background-position: center center;
    background-repeat: none;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

header .intro-text {
    padding-top: 100px;
    padding-bottom: 50px;

}

.intro-titles {
    background-image: url('{{ site.baseurl }}/img/brushstroke.png');
    background-size: 100% 100%;
    background-repeat: no-repeat;
}

header .intro-text .intro-lead-in {
    font-family : "Cormorant Garamond";
    color: #eee;
    font-size: 30px;
    font-style: italic;
    font-weight: 700;
    letter-spacing: 5px;
}

header .intro-text .intro-heading {
    margin-bottom: 25px;
    text-transform: uppercase;
    font-family: {{ site.data.template.font.primary }};
    font-size: 38px;
    font-weight: 200;
    line-height: 50px;
    letter-spacing: 10px;
}

@media(min-width:768px) {
    header .intro-text {
        padding-top: 300px;
        padding-bottom: 200px;
    }

    header .intro-text .intro-lead-in {
        font-size: 80px;
    }

    header .intro-text .intro-heading {
        margin-bottom: 50px;
        font-family: "futura-pt", sans-serif;
        font-size: 55px;
        line-height: 55px;
    }
}

section {
    padding: 100px 0;
}

section h2.section-heading {
    margin-top: 0;
    margin-bottom: 15px;
}

section h3.section-subheading {
    margin-bottom: 75px;
    text-transform: none;
    font-family: {{ site.data.template.font.secondary }};
    font-size: 18px;
    font-style: italic;
    font-weight: 400;
}

@media(min-width:768px) {
    section {
        padding: 100px 0;
    }
    section h2.section-heading {
        font-size: 40px;
    }
}

.service-heading {
    margin: 15px 0;
    text-transform: none;
}

#offers .offers-item {
    right: 0;
    margin: 0 0 15px;
}

#offers .offers-item .offers-link {
    display: block;
    position: relative;
    margin: 0 auto;
    max-width: 400px;
}

#offers .offers-item .offers-link .offers-hover {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0;
    -webkit-transition: all ease .5s;
    -moz-transition: all ease .5s;
    transition: all ease .5s;
    background: rgba(243, 144, 150,.9); /* Fallback when no plugin support */
    background: rgba({{ site.data.template.color.primary | hex_to_rgb | join: ',' }}, .9);
}

#offers .offers-item .offers-link .offers-hover:hover {
    opacity: 1;
}

#offers .offers-item .offers-link .offers-hover .offers-hover-content {
    position: absolute;
    top: 50%;
    width: 100%;
    height: 20px;
    margin-top: -12px;
    text-align: center;
    font-size: 20px;
    color: #fff;
}

#offers .offers-item .offers-link .offers-hover .offers-hover-content i {
    margin-top: -12px;
}

#offers .offers-item .offers-link .offers-hover .offers-hover-content h3,
#offers .offers-item .offers-link .offers-hover .offers-hover-content h4 {
    margin: 0;
}

#offers .offers-item .offers-caption {
    margin: 0 auto;
    padding: 25px;
    max-width: 400px;
    text-align: center;
    background-color: #fff;
}

#offers .offers-item .offers-caption h4 {
    margin: 0;
    text-transform: none;
}
/* ... */

